tests/pass/no-unimported-text-default.tsx
import Text from "@/components/ui/text";

const view = <Text />;
