tests/fail/no-unimported-text.tsx
const paired = <Text>Missing import</Text>;
const selfClosing = <Text />;
const constructor = new Text();
